# yt-dlp-rs

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  SKILL.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: PLAN.md  architecture.md  code-quality-findings.md  codelabs.md  design.md  tasks.md
private/: MEMORY_discrepancies.md  crawl_channels.py  crawl_channels.sh  crawl_channels_zh.py
ytdlp-cli/: Cargo.toml
ytdlp-cli/src/: client.rs  config.rs  main.rs  output_template.rs  progress.rs
ytdlp-downloader/: Cargo.toml
ytdlp-downloader/src/: dash.rs  downloader.rs  hls.rs  http.rs  lib.rs
ytdlp-extractor/: Cargo.toml
ytdlp-extractor/src/: extractor.rs  generic.rs  lib.rs  registry.rs  video_info.rs
ytdlp-extractors/: Cargo.toml
ytdlp-extractors/src/: generic.rs  lib.rs  youtube.rs
ytdlp-net/: Cargo.toml
ytdlp-net/src/: cookies.rs  http.rs  lib.rs  proxy.rs  redirect.rs  user_agent.rs
ytdlp-postproc/: Cargo.toml
ytdlp-postproc/src/: embedder.rs  ffmpeg.rs  lib.rs  merger.rs  subtitles.rs
ytdlp-proto/: Cargo.toml  build.rs
ytdlp-proto/proto/: ytdlp.proto
ytdlp-proto/src/: lib.rs
ytdlp-server/: Cargo.toml
ytdlp-server/src/: main.rs  service.rs
