[workspace]
resolver = "2"
members = [
    "ytdlp-proto",
    "ytdlp-server",
    "ytdlp-cli",
    "ytdlp-net",
    "ytdlp-extractor",
    "ytdlp-postproc",
    "ytdlp-downloader",
    "ytdlp-extractors",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors = ["yt-dlp project"]
repository = "https://github.com/yt-dlp/yt-dlp"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
anyhow = "1"
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
hls_m3u8 = "0.5"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
