[package]
name = "ytdlp-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ytdlp"
path = "src/main.rs"

[dependencies]
ytdlp-proto = { path = "../ytdlp-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
