[package]
name = "ytdlp-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ytdlp"
path = "src/main.rs"

[dependencies]
ytdlp-proto = { path = "../ytdlp-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
