[package]
name = "ytdlp-net"
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "multipart"] }
parking_lot = "0.12"
anymap = "0.12"
url = "2"
bytes = "1"
thiserror = "1"
rand = "0.8"
dirs = "5"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
