[package]
name = "ytdlp-postproc"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tracing = { workspace = true }
